# stangene

./: .gitignore  LICENSE  README.md  pyproject.toml  skill.md
.claude-plugin/: plugin.json
.github/workflows/: docs.yml  tests.yml
docs/: adding-species.md  changelog.md  cli.md  conf.py  conflicts.md  how-it-works.md  index.md  input-formats.md  output-schema.md  quickstart.md  reference-data.md
docs/api/: biotype.md  classify.md  harmonize.md  hb.md  io.md  merge.md  mito.md  references.md  report.md  run.md  species.md
docs/superpowers/plans/: 2026-03-24-stangene-implementation.md  2026-06-24-canonical-biotype.md
docs/superpowers/specs/: 2026-03-24-gene-harmonization-design.md  2026-06-24-canonical-biotype-design.md
hooks/: hooks.json  post_stangene_success.py
skills/stangene/: SKILL.md
src/stangene/: __init__.py  __main__.py  _logging.py  biotype.py  classify.py  harmonize.py  hb.py  io.py  merge.py  mito.py  references.py  report.py  species.py
src/stangene/data/refs/c_elegans/: build_metadata.json  gene_table.parquet
src/stangene/data/refs/cynomolgus/: build_metadata.json  gene_table.parquet
src/stangene/data/refs/fruit_fly/: build_metadata.json  gene_table.parquet
src/stangene/data/refs/human/: build_metadata.json  (+1 more)
tests/: conftest.py  test_biotype.py  test_classify.py  test_edge_cases.py  test_harmonize.py  test_harmonize_anndata.py  test_hb_mask.py  test_io.py  test_markdown_report.py  test_merge.py  test_mito_mask.py  test_pbmc3k.py  test_references.py  test_report.py  test_resolve_species.py  test_run.py  test_species.py
(+12 files in other folders)
