[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stangene"
version = "0.1.0"
description = "Gene identifier harmonization for single-cell transcriptomics"
license = {text = "MIT"}
authors = [{name = "Sijie Chen"}]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "anndata>=0.8",
    "pyarrow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "scanpy>=1.9"]
docs = [
    "sphinx>=7.0",
    "furo",
    "myst-parser>=3.0",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
]

[project.scripts]
stangene = "stangene.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stangene = ["data/refs/*/*.parquet", "data/refs/*/*.json"]
